[tool.poetry]
name = "betterreads-api"
version = "0.1.0"
description = ""
authors = ["Christoph Minixhofer <christoph.minixhofer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
uvicorn = {extras = ["standard"], version = "^0.13.3"}
h5py = "^3.1.0"
sentence-transformers = "^0.4.1"
pymongo = {extras = ["srv"], version = "^3.11.3"}

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
